--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "express": "^4.17.1",
     "pg": "^8.11.3",
